--- a/apps/editor-playground/src/styles.css
+++ b/apps/editor-playground/src/styles.css
@@ -1,1 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {box-sizing: border-box;}
+
+.ProseMirror {
+    border: 1px solid #333;
+      margin-top: 0.75em;
+      height: 400px;
+      width: 100%;
+      padding: 1rem;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  ​
+    ul,
+    ol {
+      padding: 0 1rem;
+    }
+  ​
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      line-height: 1.1;
+    }
+  ​
+    code {
+      background-color: rgba(#616161, 0.1);
+      color: #616161;
+    }
+  ​
+    pre {
+      background: #0D0D0D;
+      color: #FFF;
+      font-family: 'JetBrainsMono', monospace;
+      padding: 0.75rem 1rem;
+      border-radius: 0.5rem;
+    }
+  ​
+    code {
+      color: inherit;
+      padding: 0;
+      background: none;
+      font-size: 0.8rem;
+    }
+  ​
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  ​
+    blockquote {
+      padding-left: 1rem;
+      border-left: 2px solid rgba(#0D0D0D, 0.1);
+    }
+  ​
+    hr {
+      border: none;
+      border-top: 2px solid rgba(#0D0D0D, 0.1);
+      margin: 2rem 0;
+    }
+  
