--- a/apps/editor-playground/src/styles.css
+++ b/apps/editor-playground/src/styles.css
@@ -6,7 +6,8 @@
     border: 1px solid #333;
       margin-top: 0.75em;
       height: 400px;
-      width: 100%;
+      width: calc(100% - 40px);
+      margin-left: 40px;
       padding: 1rem;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
